apps/ws-backend/error_log.txt

> ws-backend@1.0.0 dev /mnt/c/Users/dell/OneDrive/Documents/excelidraw/week-22-excelidraw/apps/ws-backend
> npm run build && npm run start


> ws-backend@1.0.0 build
> tsc -b


> ws-backend@1.0.0 start
> node ./dist/index.js

/mnt/c/Users/dell/OneDrive/Documents/excelidraw/week-22-excelidraw/packages/backend-common/src/index.ts:2
export const JWT_SECRET = process.env.JWT_SECRET || "123123";
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1281:20)
    at Module._compile (node:internal/modules/cjs/loader:1321:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (/mnt/c/Users/dell/OneDrive/Documents/excelidraw/week-22-excelidraw/apps/ws-backend/dist/index.js:8:18)
    at Module._compile (node:internal/modules/cjs/loader:1358:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)

Node.js v20.16.0
 ELIFECYCLE  Command failed with exit code 1.
